# prex

./: .gitignore  Cargo.toml  PKGBUILD  README.md
src/: cli.rs  commands.rs  db.rs  main.rs  paths.rs  process.rs  proton.rs  steam.rs  wineserver.rs
src/steam/: vdf.rs
