[package]
name = "pfx"
version = "0.2.2"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
ctrlc = "3.5.1"
keyvalues-serde = "0.2.3"
nix = { version = "0.30.1", features = ["signal", "process"] }
serde = { version = "1.0.228", features = ["derive"] }
shlex = "1.3.0"


[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
unwrap_or_default = "deny"
get_unwrap = "deny"
map_unwrap_or = "deny"
unnecessary_unwrap = "deny"
mem_forget = "deny"
only_used_in_recursion = "deny"
allow_attributes = "deny"
clone_on_ref_ptr = "deny"
mutex_atomic = "deny"
rc_mutex = "deny"
